fixed submit button spacing

--- a/collapse-style.css
+++ b/collapse-style.css
@@ -32,6 +32,7 @@ input[type=submit]{
   border-radius: 4px;
   cursor: pointer;
   font-size: large;
+  margin-top: 20px;
 }
 input[type=submit]:hover {
   /*background-color: #45a049;*/
